@@ -1,6 +1,6 @@
 Package: R2jags
 Version: 0.5-7
-Date: 2015-7-16
+Date: 2015-8-22
 Title: Using R to Run 'JAGS'
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>,
         Masanao Yajima <yajima@stat.ucla.edu>,
