@@ -7,7 +7,6 @@ importFrom(stats, "lowess", "quantile", "runif", "sd", "time", "update", "var")
 importFrom(utils, "read.table")
 
 
-
 importFrom(rjags, "jags.model",
                   "coda.samples",
                   "load.module",
@@ -15,14 +14,7 @@ importFrom(rjags, "jags.model",
 
 importFrom(abind, "abind")
 
-importFrom(coda, "as.mcmc",
-    "mcmc",
-    "as.mcmc.list",
-    "traceplot",
-    "nvar",
-    "nchain",
-    "varnames")
-
+importFrom(coda, "as.mcmc", "mcmc", "nvar", "varnames", "nchain", "as.mcmc.list", "traceplot")
 
 import(parallel)
 
